kubernetes/cluster/monitoring/020-gatus.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: status
  namespace: monitoring
  labels:
    app.kubernetes.io/name: status
    app.kubernetes.io/component: gatus
    app.kubernetes.io/part-of: status
    app.kubernetes.io/version: "5.7.0"
spec:
  serviceName: gatus
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: status
      app.kubernetes.io/component: gatus
      app.kubernetes.io/part-of: status
  template:
    metadata:
      labels:
        app.kubernetes.io/name: status
        app.kubernetes.io/component: gatus
        app.kubernetes.io/part-of: status
        app.kubernetes.io/version: "5.7.0"
    spec:
      volumes:
        - name: config
          configMap:
            name: gatus-config-2024-01-16
      containers:
        - name: gatus
          image: twinproduction/gatus:v5.7.0
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 2
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /var/gatus/config/
            - name: data
              mountPath: /var/gatus/data/
          resources:
            requests:
              cpu: 100m
              memory: 48Mi
            limits:
              cpu: 200m
              memory: 128Mi  
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: monitoring
        labels:
          app.kubernetes.io/name: status
          app.kubernetes.io/component: gatus
          app.kubernetes.io/part-of: status
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: status
    app.kubernetes.io/component: gatus
    app.kubernetes.io/part-of: status
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: status
    app.kubernetes.io/component: gatus
    app.kubernetes.io/part-of: status
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status
  namespace: monitoring
  labels:
    app.kubernetes.io/name: status
    app.kubernetes.io/component: gatus
    app.kubernetes.io/part-of: status
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - status
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gatus
                port:
                  name: http
---
