kubernetes/cluster/monitoring/050-speedtest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: openspeedtest
  replicas: 1
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: openspeedtest/latest:v2.0.4
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: monitoring
spec:
  ports:
    - name: web
      port: 3000
      targetPort: 3000
  selector:
    app: openspeedtest
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: speedtest
  namespace: monitoring
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - speedtest
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openspeedtest
                port:
                  name: web
---
